test/lib-interaction/Issue2066.out
Agda2> (agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : Data.Empty.⊥ ?1 : Data.Empty.⊥ " nil)
((last . 1) . (agda2-goals-action '(0 1)))
Agda2> (agda2-info-action "*Error*" "Issue2066.agda:27.54-58: error: [Interaction.CaseSplitError] Unbound variable p when checking that the expression ? has type Data.Empty.⊥" nil)
((last . 3) . (agda2-maybe-goto '("Issue2066.agda" . 903)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
Agda2> 